--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
     "@nestjs/common": "^8.1.1",
@@ -26,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/typeorm": "^8.1.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
@@ -50,7 +52,7 @@
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
-    "ts-node": "^10.3.0",
+    "ts-node": "^10.8.0",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
   },
